Изменили меню и все

--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Мониторинг серверов Air</title>
+  <title>FanUnturned</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>AIR сервера в Антюрнед</h1>
+  <header>
+    <ol align="center">
+      <li><a href="#">Список серверов</a></li>
+      <li><a href="#">Теории</a></li>
+      <li><a href="#">Гайды</a></li>
+      <li><a href="#">Раздача скинов</a></li>
+      <li><a href="#">Розыгрыши</a></li>
+    </ol>
+  </header>
+  <main>
+    <div class="posts">
+      <H2>Интересное</H2>
+      <p class="button">Баги недели</p>
+
+
+
+
+      
+      <h1>Заявки на админа</h1>
+      <p class="button">Условия...</p>
+      <h1>Заявки на хэлпера</h1>
+      <p class="button">Условия...</p>
+    </div>
+  <main>
+<!-- <h1>AIR сервера в Антюрнед</h1>
 <P>AIR #1 - X10 LOOT PEI</P>
 <p>AIR #2 - X25 LOOT PEI</p>
 <p>AIR #3 - X50 LOOT PEI</p>
@@ -19,6 +43,6 @@
 <h3>В чем же фишка вируса?</h3>
 <p>Для людей которые играют уже давно это будет новеньким и интересным!
 Но а те кто только начали советуем сначала поиграйте в одиночном или же на серверах с малым онлайном </p>
-<p>Так вот вы будете заражены им от зомби, игроков но он будет развиватся и вскоре наносить урон</p>
+<p>Так вот вы будете заражены им от зомби, игроков но он будет развиватся и вскоре наносить урон</p> -->
 </body>
 </html>
